--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title> space images </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="sketch.js"></script>
+  <meta charset="utf-8">
+</head>
+<body>
+  <div id="container">
+    <div id="button_container">
+      <button onclick="get_random_image()">Get Random Image</button>
+    </div>
+    <br />
+    <div id="inner_container">
+      <div id="image_name_container">
+        <span id="image_name"></span>
+      </div>
+      <img id="image_shower" />
+    </div>
+  </div>
+</body>
 
-  </head>
-  <body>
-    <script src="sketch.js"></script>
-  
-
-</body></html>
+<script>
+  get_random_image();
+</script>
+</html>
