--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
   <script src="sketch.js"></script>
   <meta charset="utf-8">
 </head>
+
 <body>
-  <div id="container">
-    <div id="button_container">
-      <button onclick="get_random_image()">Get Random Image</button>
+  <div class="container">
+    <div id="button_container" class="row">
+      <button onclick="get_random_image()">Get space</button>
     </div>
-    <br />
-    <div id="inner_container">
-      <div id="image_name_container">
-        <span id="image_name"></span>
-      </div>
-      <img id="image_shower" />
+    <div id="inner_container" class="row">
+      <img id="image_shower" width="800px" />
+    </div>
+    <div class="row">
+      <p class="description">Test</p>
     </div>
   </div>
+ <div class="animation-area">
+    <ul class="box-area">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+  </ul>
+</div>
 </body>
 
 <script>
