--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <div class="link-container">
+    <a href="bio.html">Bio</a>
+  </div>
   <div class="container">
     <div id="button_container" class="row">
       <button onclick="get_random_image()">Get space</button>
